--- a/serveur_rest_api/requirements.txt
+++ b/serveur_rest_api/requirements.txt
@@ -1,9 +1,13 @@
 alembic==1.13.3
 blinker==1.8.2
 click==8.1.7
+colorama==0.4.6
 dominate==2.9.1
+Faker==33.0.0
 Flask==3.0.3
 Flask-Bootstrap==3.3.7.1
+Flask-Cors==5.0.0
+Flask-JWT-Extended==4.7.0
 Flask-Login==0.6.3
 Flask-Migrate==4.0.7
 Flask-Seeder==1.2.0
@@ -12,10 +16,15 @@ Flask-WTF==1.2.1
 greenlet==3.1.1
 itsdangerous==2.2.0
 Jinja2==3.1.4
+lull==0.0.1
 Mako==1.3.5
 MarkupSafe==2.1.5
+PyJWT==2.10.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+seeder==0.0.5
 setuptools==75.1.0
+six==1.16.0
 SQLAlchemy==2.0.35
 typing_extensions==4.12.2
 visitor==0.1.3
