--- a/web_mobile/package.json
+++ b/web_mobile/package.json
@@ -16,11 +16,13 @@
     "@react-navigation/native": "^7.0.1",
     "@react-navigation/stack": "^7.0.1",
     "axios": "^1.7.7",
+    "ejs": "^3.1.6",
     "expo": "~52.0.5",
     "expo-constants": "~17.0.3",
     "expo-linking": "~7.0.3",
     "expo-router": "~4.0.7",
     "expo-status-bar": "~2.0.0",
+    "express": "^4.17.3",
     "jwt-decode": "^4.0.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -28,14 +30,16 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-web": "~0.19.13",
-    "socket.io-client": "^4.8.1"
+    "socket.io": "^4.4.1",
+    "socket.io-client": "^5.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@eslint/js": "^9.14.0",
     "eslint": "^8.57.1",
     "eslint-plugin-react": "^7.37.2",
-    "globals": "^15.12.0"
+    "globals": "^15.12.0",
+    "nodemon": "^2.0.15"
   },
   "private": true
 }
